# Unicode

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  desktopAgent.md  orchestrator.md  orchestrator.py  package.json  pyproject.toml  requirements.txt  skills-lock.json  test_e2e.py  test_runner.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
.orchestrator/: history.md  plan.md
agents/: base.py  claude_agent.py  codex_agent.py  kiro_agent.py  qwen_agent.py
phases/: clarify.py  discuss.py  implement.py  plan.py  research.py  review.py  skills_scout.py
scripts/: generate_key.py  postinstall.js  test_run.sh
tests/: conftest.py  test_approval.py  test_clarify.py  test_discuss.py  test_e2e.py  test_fallback.py  test_git_utils.py  test_history.py  test_implementation_fallback.py  test_init_project.py  test_integration.py  test_memory.py  test_memory_extended.py  test_plan.py  test_plan_parser.py  test_repo_map.py  test_review.py  test_runner.py  test_session.py  test_skills_discovery.py  test_skills_scout.py  test_usage_limit.py
utils/: approval.py  constants.py  fallback.py  git_utils.py  history.py  init_project.py  license.py  logger.py  memory.py  model_config.py  plan_parser.py  repo_map.py  runner.py  session.py  skills_discovery.py
