[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unicode"
version = "0.1.0"
description = "Orchestrate Claude Code and Codex CLI into an automated agentic workflow"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
unicode = "orchestrator:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
# E402: module-level import not at top (used intentionally in some utils)
# E741: ambiguous variable name (l for line is common in existing code)
# F401: auto-fixable unused imports handled via --fix; keep for new files
ignore = ["E402", "E501", "E741"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.setuptools]
py-modules = ["orchestrator"]
packages = ["agents", "phases", "utils"]

[tool.setuptools.package-data]
"*" = ["config.yaml"]
